--- a/views/auth/changePasswordForm.ejs
+++ b/views/auth/changePasswordForm.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Students</title>
+    <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="/css/app.css" />-->
 </head>
@@ -48,36 +48,26 @@
 </nav>
 <section>
     <div class="container">
-        <h1>Students</h1>
-        <a href="/students/create-student" class="float-end btn btn-outline-primary">Create a new student</a>
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email</th>
-                <th scope="col">Age</th>
-                <th scope="col">Tel</th>
-                <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <% items.map((item,key)=>{ %>
-                <tr>
-                    <th scope="row"><%= key+1 %></th>
-                    <td><%= item.name %></td>
-                    <td><%= item.email %></td>
-                    <td><%= item.age %></td>
-                    <td><%= item.tel %></td>
-                    <td><a href="/students/edit-student/<%= item._id %>">Edit</a>
-                        <form action="/students/delete-student/<%= item._id%>" method="post">
-                            <button onclick="return confirm('Bạn chắc chắn muốn xóa <%= item.name %>?')" type="submit" class="btn btn-outline-danger">Delete</button>
-                        </form>
-                    </td>
-                </tr>
-            <% })%>
-            </tbody>
-        </table>
+        <h1>Change password</h1>
+        <div class="row">
+            <div class="col-4">
+                <form action="/auth/change-password" method="post">
+                    <div class="mb-3">
+                        <label class="form-label">Current Password</label>
+                        <input type="password" name="current_password" class="form-control" placeholder="Password..">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">New Password</label>
+                        <input type="password" name="new_password" class="form-control" placeholder="Password..">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Confirm Password</label>
+                        <input type="password" name="confirm_password" class="form-control" placeholder="Password..">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
 </section>
 </body>
